// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toaster > components > renders correctly Toast.Button 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      class="styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_primary__e1wcoe7 styles_undefined_compound_0__e1wcoel"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`toaster > components > renders correctly Toast.Button and variant ghost 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #ffffff;
}

<div
    data-testid="testing"
  >
    <button
      class="emotion-0 emotion-1 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_ghost__e1wcoei styles_sentiment_primary__e1wcoe7 styles_undefined_compound_18__e1wcoe13"
      type="button"
    >
      Test
    </button>
  </div>
</DocumentFragment>
`;

exports[`toaster > components > renders correctly Toast.Link 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #ffffff;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  gap: 0.5rem;
  position: relative;
  cursor: pointer;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
}

.emotion-0 .e1afnb7a3,
.emotion-0 .e1afnb7a2,
.emotion-0 .e1afnb7a4 {
  -webkit-transition: -webkit-transform 250ms ease-out;
  transition: transform 250ms ease-out;
}

.emotion-0>* {
  pointer-events: none;
}

.emotion-0:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-0:hover,
.emotion-0:focus {
  outline: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  color: #f9f9fa;
  text-decoration-color: #f9f9fa;
}

.emotion-0:hover .e1afnb7a3,
.emotion-0:focus .e1afnb7a3,
.emotion-0:hover .e1afnb7a2,
.emotion-0:focus .e1afnb7a2,
.emotion-0:hover .e1afnb7a4,
.emotion-0:focus .e1afnb7a4 {
  -webkit-transform: translate(-0.125rem, 0);
  -moz-transform: translate(-0.125rem, 0);
  -ms-transform: translate(-0.125rem, 0);
  transform: translate(-0.125rem, 0);
}

.emotion-0:hover:visited,
.emotion-0:focus:visited {
  text-decoration-color: transparent;
  color: #ffffff;
}

.emotion-0[data-variant='inline'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-0:hover::after,
.emotion-0:focus::after {
  background-color: #005da3;
}

.emotion-0:active {
  text-decoration-thickness: 2px;
}

<div
    data-testid="testing"
  >
    <a
      class="emotion-0 emotion-1"
      data-variant="standalone"
      href="scaleway.com"
      prominence="strong"
      variant="bodySmallStrong"
    >
      Test
    </a>
  </div>
</DocumentFragment>
`;

exports[`toaster > renders correctly with all kind of toast 1`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is a success
</span>
`;

exports[`toaster > renders correctly with all kind of toast 2`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is an error
</span>
`;

exports[`toaster > renders correctly with all kind of toast 3`] = `
.emotion-0 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="emotion-0 emotion-1"
>
  This is a warning
</span>
`;

exports[`toaster > renders correctly with all kind of toast 4`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 0.25rem;
  min-height: 3.5rem;
}

.emotion-0 .Toastify__toast-container {
  width: 21.5rem;
}

.emotion-0 .Toastify__toast-body {
  margin: 0;
  padding: 0;
}

.emotion-0.Toastify__toast--success {
  background-color: #151a2d;
  color: #ffffff;
  padding: 1rem;
}

.emotion-0.Toastify__toast--error {
  background-color: #e51963;
  color: #ffffff;
  padding: 1rem;
}

.emotion-0.Toastify__toast--warning {
  background-color: #fbc600;
  color: #222638;
  padding: 1rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: 100%;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 1rem;
}

.emotion-3 {
  font-size: 0.875rem;
  font-family: Inter,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5 {
  background: none;
  margin: auto;
  margin-left: 0.5rem;
}

.emotion-5:hover,
.emotion-5:active {
  background: none;
  box-shadow: none;
  border: none;
}

.emotion-7 {
  vertical-align: middle;
  fill: currentColor;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-7 .fillStroke {
  stroke: currentColor;
  fill: none;
}

<div
    data-testid="testing"
  >
    <section
      aria-atomic="false"
      aria-label="Notifications Alt+T"
      aria-live="polite"
      aria-relevant="additions text"
      class="Toastify"
      id="toaster"
    >
      <div
        class="Toastify__toast-container Toastify__toast-container--top-right"
        data-stacked="true"
        tabindex="-1"
      >
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="success"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.95;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is a success
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-6 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_success__e1wcoeb styles_undefined_compound_4__e1wcoep"
            type="button"
          >
            <svg
              class="emotion-7 emotion-8"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-collapsed="true"
          data-in="true"
          data-pos="top"
          id="error"
          role="alert"
          style="--y: 0px; --g: 12; --s: 0.975;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is an error
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-6 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_danger__e1wcoe9 styles_undefined_compound_2__e1wcoen"
            type="button"
          >
            <svg
              class="emotion-7 emotion-8"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
        <div
          class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning emotion-0 Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
          data-in="true"
          data-pos="top"
          id="warning"
          role="alert"
          style="--y: 0px; --g: 12; --s: 1;"
          tabindex="0"
        >
          <div
            class="emotion-1 emotion-2"
          >
            <span
              class="emotion-3 emotion-4"
            >
              This is a warning
            </span>
          </div>
          <button
            aria-label="close"
            class="emotion-5 emotion-6 styles__e1wcoe0 styles_size_xsmall__e1wcoe4 styles_fullWidth_false__e1wcoe6 styles_disabled_false__e1wcoek styles_variant_filled__e1wcoeg styles_sentiment_warning__e1wcoec styles_undefined_compound_5__e1wcoeq"
            type="button"
          >
            <svg
              class="emotion-7 emotion-8"
              viewBox="0 0 16 16"
            >
              <path
                d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
              />
            </svg>
          </button>
          <div
            class="Toastify__progress-bar--wrp"
            data-hidden="true"
          >
            <div
              class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            />
            <div
              aria-hidden="true"
              aria-label="notification timer"
              class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
              role="progressbar"
              style="animation-duration: 6000ms; animation-play-state: paused;"
            />
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
